force-app/main/default/objects/Contact/fields/Age_by_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_by_Range__c</fullName>
    <formula>YEAR(TODAY()) - (YEAR(Birthdate) - 

IF( 

AND(MONTH(Birthdate) = 02, 

DAY(Birthdate) = 29, 

TODAY() &gt; DATE(YEAR(TODAY()), 02, 28)), 

0,	

IF( 

TODAY() &gt;= DATE(YEAR(TODAY()), MONTH(Birthdate), DAY(Birthdate)), 

0, 

1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age by Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>