force-app/main/default/objects/Contact/fields/Agency_Admin__c.field-meta.xml
<CustomField>
    <fullName>Agency_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Admin</label>
    <type>Checkbox</type>
</CustomField>