force-app/main/default/objects/Contact/fields/Birth_Date_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_Formula_Field__c</fullName>
    <formula>IF( Birthdate &lt;&gt; null, Birthdate, Birth_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Date Formula Field</label>
    <type>Date</type>
</CustomField>