force-app/main/default/objects/Contact/fields/Company_Share__c.field-meta.xml
<CustomField>
    <fullName>Company_Share__c</fullName>
    <label>Company Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>