force-app/main/default/objects/Contact/fields/Contact_First_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name_Arabic__c</fullName>
    <label>Contact First Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>