force-app/main/default/objects/Contact/fields/Contact_Salutation_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation_Arabic__c</fullName>
    <label>Contact Salutation (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>