force-app/main/default/objects/Contact/fields/Currency_Other__c.field-meta.xml
<CustomField>
    <fullName>Currency_Other__c</fullName>
    <label>Currency - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>