force-app/main/default/objects/Contact/fields/Currency_Other_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Currency_Other_Arabic__c</fullName>
    <label>Currency - Other (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>