force-app/main/default/objects/Contact/fields/Disabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Date__c</fullName>
    <label>Disabled Date</label>
    <type>Date</type>
</CustomField>