force-app/main/default/objects/Contact/fields/Emirates_ID_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Card_Number__c</fullName>
    <label>Emirates ID Card Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>