force-app/main/default/objects/Contact/fields/Emirates_ID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Expiry_Date__c</fullName>
    <label>Emirates ID Expiry Date</label>
    <type>Date</type>
</CustomField>