force-app/main/default/objects/Contact/fields/Emirates_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Number__c</fullName>
    <label>Emirates ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>