force-app/main/default/objects/Contact/fields/Estimated_duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_duration__c</fullName>
    <label>Estimated duration of holding property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 Year</fullName>
            </value>
            <value>
                <fullName>1-3 Years</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
            <value>
                <fullName>More than 5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>