force-app/main/default/objects/Contact/fields/FireBase_Token__c.field-meta.xml
<CustomField>
    <fullName>FireBase_Token__c</fullName>
    <label>Firebase Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>