force-app/main/default/objects/Contact/fields/Nationality_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Arabic__c</fullName>
    <label>Nationality Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>