force-app/main/default/objects/Contact/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>