force-app/main/default/objects/Contact/fields/Nature_of_Business_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Arabic__c</fullName>
    <label>Nature of Business Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>