force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation/Name of Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>