force-app/main/default/objects/Contact/fields/Occupation_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Arabic__c</fullName>
    <label>Occupation (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>