force-app/main/default/objects/Contact/fields/Passport_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date__c</fullName>
    <label>Passport Issue Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>