force-app/main/default/objects/Contact/fields/Passport_Issue_Date_D__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date_D__c</fullName>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>