force-app/main/default/objects/Contact/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>