force-app/main/default/objects/Contact/fields/Payment_methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_methods__c</fullName>
    <label>Payment methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheques</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>