force-app/main/default/objects/Contact/fields/Payment_Methods_Other__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods_Other__c</fullName>
    <label>Payment Methods - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>