force-app/main/default/objects/Contact/fields/Person_Account_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Salutation__c</fullName>
    <formula>TEXT(Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Salutation</label>
    <type>Text</type>
</CustomField>