force-app/main/default/objects/Contact/fields/Place_of_Birth_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_Arabic__c</fullName>
    <label>Place of Birth (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>