force-app/main/default/objects/Contact/fields/POA_Holder_Emirates_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder_Emirates_ID_Number__c</fullName>
    <label>POA Holder Emirates ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>