force-app/main/default/objects/Contact/fields/POA_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder_Name__c</fullName>
    <label>POA Holder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>