force-app/main/default/objects/Contact/fields/POA_Holder_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder_Name_Arabic__c</fullName>
    <label>POA Holder Name Arabic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>