force-app/main/default/objects/Contact/fields/POA_Holder_Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder_Passport_Expiry_Date__c</fullName>
    <label>POA Holder Passport Expiry Date</label>
    <type>Date</type>
</CustomField>