force-app/main/default/objects/Contact/fields/POA_Holder_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder_Passport_Number__c</fullName>
    <label>POA Holder Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>