force-app/main/default/objects/Contact/fields/Politically_Exposed__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed__c</fullName>
    <inlineHelpText>Are you a politically exposed person, or a close family member or associate of one?</inlineHelpText>
    <label>Politically Exposed Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, please specify</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>