force-app/main/default/objects/Contact/fields/Politically_Exposed_Person_Text_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed_Person_Text_Arabic__c</fullName>
    <label>Politically Exposed Person-Text(Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>