force-app/main/default/objects/Contact/fields/Position_in_Company__c.field-meta.xml
<CustomField>
    <fullName>Position_in_Company__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>