force-app/main/default/objects/Contact/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <label>Source of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Business Income</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>