force-app/main/default/objects/Contact/fields/Source_of_Funds_Other_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_Other_Arabic__c</fullName>
    <label>Source of Funds - Other (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>