force-app/main/default/objects/Contact/fields/Visa_Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Visa_Date_of_Issue__c</fullName>
    <label>Visa Date of Issue</label>
    <type>Date</type>
</CustomField>