force-app/main/default/objects/Contact/fields/Visa_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expire_Date__c</fullName>
    <label>Visa Expire Date</label>
    <type>Date</type>
</CustomField>