force-app/main/default/objects/Contact/fields/Visa_Place_Issue__c.field-meta.xml
<CustomField>
    <fullName>Visa_Place_Issue__c</fullName>
    <label>Visa Place of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>