force-app/main/default/objects/Contact/fields/Visa_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Visa_Place_of_Issue__c</fullName>
    <label>Visa Place of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>