force-app/main/default/objects/Contact/fields/Visa_Place_of_Issue_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Visa_Place_of_Issue_Arabic__c</fullName>
    <label>Visa Place of Issue Arabic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>